2008-09-22  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_create_gl_drawable):
      if glx find visual fail try to find visual manually.

2008-09-22  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* lib/Makefile.am:
	* lib/ccm-config.c (ccm_config_init), (ccm_config_finalize),
	(ccm_config_class_init), (ccm_config_on_change),
	(ccm_config_copy_entry), (ccm_config_new),
	(ccm_config_get_boolean), (ccm_config_set_boolean),
	(ccm_config_get_integer), (ccm_config_set_integer),
	(ccm_config_get_float), (ccm_config_set_float),
	(ccm_config_get_string), (ccm_config_set_string),
	(ccm_config_get_string_list), (ccm_config_set_string_list),
	(ccm_config_get_integer_list), (ccm_config_set_integer_list),
	(ccm_config_get_color):
	* lib/ccm-config.h:
	* lib/ccm-timeline.c (timeout_add), (timeout_remove),
	(timeline_marker_new), (timeline_marker_free),
	(ccm_timeline_set_property), (ccm_timeline_get_property),
	(ccm_timeline_finalize), (ccm_timeline_dispose),
	(ccm_timeline_class_init), (ccm_timeline_init),
	(timeline_timeout_func), (timeline_timeout_add),
	(delay_timeout_func), (ccm_timeline_start), (ccm_timeline_pause),
	(ccm_timeline_stop), (ccm_timeline_set_loop),
	(ccm_timeline_get_loop), (ccm_timeline_rewind),
	(ccm_timeline_skip), (ccm_timeline_advance),
	(ccm_timeline_get_current_frame), (ccm_timeline_get_n_frames),
	(ccm_timeline_set_n_frames), (ccm_timeline_set_speed),
	(ccm_timeline_get_speed), (ccm_timeline_is_playing),
	(ccm_timeline_clone), (ccm_timeline_new_for_duration),
	(ccm_timeline_new), (ccm_timeline_get_delay),
	(ccm_timeline_set_delay), (ccm_timeline_get_duration),
	(ccm_timeline_set_duration), (ccm_timeline_get_progress),
	(ccm_timeline_get_direction), (ccm_timeline_set_direction),
	(ccm_timeline_get_delta), (ccm_timeline_add_marker_internal),
	(ccm_timeline_add_marker_at_frame),
	(ccm_timeline_add_marker_at_time), (ccm_timeline_list_markers),
	(ccm_timeline_advance_to_marker), (ccm_timeline_remove_marker):